; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_detection_layer.c_make_detection_layer.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_detection_layer.c_make_detection_layer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i8*, i8*, i8*, i8*, i32, i32, i32, i32, i8*, i32, i32 }

@DETECTION = common dso_local global i32 0, align 4
@forward_detection_layer = common dso_local global i32 0, align 4
@backward_detection_layer = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"Detection Layer\0A\00", align 1
@backward_detection_layer_gpu = common dso_local global i32 0, align 4
@forward_detection_layer_gpu = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @make_detection_layer(%struct.TYPE_3__* noalias sret %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  store i32 %7, i32* %15, align 4
  %16 = bitcast %struct.TYPE_3__* %0 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %16, i8 0, i64 112, i1 false)
  %17 = load i32, i32* @DETECTION, align 4
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 20
  store i32 %17, i32* %18, align 8
  %19 = load i32, i32* %11, align 4
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 0
  store i32 %19, i32* %20, align 8
  %21 = load i32, i32* %9, align 4
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 1
  store i32 %21, i32* %22, align 4
  %23 = load i32, i32* %10, align 4
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 2
  store i32 %23, i32* %24, align 8
  %25 = load i32, i32* %13, align 4
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 3
  store i32 %25, i32* %26, align 4
  %27 = load i32, i32* %14, align 4
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 4
  store i32 %27, i32* %28, align 8
  %29 = load i32, i32* %15, align 4
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 5
  store i32 %29, i32* %30, align 4
  %31 = load i32, i32* %12, align 4
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 6
  store i32 %31, i32* %32, align 8
  %33 = load i32, i32* %12, align 4
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 7
  store i32 %33, i32* %34, align 4
  %35 = load i32, i32* %12, align 4
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 8
  store i32 %35, i32* %36, align 8
  %37 = load i32, i32* %12, align 4
  %38 = load i32, i32* %12, align 4
  %39 = mul nsw i32 %37, %38
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 4
  %41 = load i32, i32* %40, align 8
  %42 = add nsw i32 1, %41
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 0
  %44 = load i32, i32* %43, align 8
  %45 = mul nsw i32 %42, %44
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 3
  %47 = load i32, i32* %46, align 4
  %48 = add nsw i32 %45, %47
  %49 = mul nsw i32 %39, %48
  %50 = load i32, i32* %10, align 4
  %51 = icmp eq i32 %49, %50
  %52 = zext i1 %51 to i32
  %53 = call i32 @assert(i32 %52)
  %54 = call i8* @calloc(i32 1, i32 4)
  %55 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 19
  store i8* %54, i8** %55, align 8
  %56 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 2
  %57 = load i32, i32* %56, align 8
  %58 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 9
  store i32 %57, i32* %58, align 4
  %59 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 6
  %60 = load i32, i32* %59, align 8
  %61 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 6
  %62 = load i32, i32* %61, align 8
  %63 = mul nsw i32 %60, %62
  %64 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 4
  %65 = load i32, i32* %64, align 8
  %66 = add nsw i32 1, %65
  %67 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 3
  %68 = load i32, i32* %67, align 4
  %69 = add nsw i32 %66, %68
  %70 = mul nsw i32 %63, %69
  %71 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 10
  store i32 %70, i32* %71, align 8
  %72 = load i32, i32* %9, align 4
  %73 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 9
  %74 = load i32, i32* %73, align 4
  %75 = mul nsw i32 %72, %74
  %76 = call i8* @calloc(i32 %75, i32 4)
  %77 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 13
  store i8* %76, i8** %77, align 8
  %78 = load i32, i32* %9, align 4
  %79 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 9
  %80 = load i32, i32* %79, align 4
  %81 = mul nsw i32 %78, %80
  %82 = call i8* @calloc(i32 %81, i32 4)
  %83 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 11
  store i8* %82, i8** %83, align 8
  %84 = load i32, i32* @forward_detection_layer, align 4
  %85 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 18
  store i32 %84, i32* %85, align 4
  %86 = load i32, i32* @backward_detection_layer, align 4
  %87 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 17
  store i32 %86, i32* %87, align 8
  %88 = load i32, i32* @stderr, align 4
  %89 = call i32 @fprintf(i32 %88, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %90 = call i32 @srand(i32 0)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @assert(i32) #2

declare dso_local i8* @calloc(i32, i32) #2

declare dso_local i32 @fprintf(i32, i8*) #2

declare dso_local i32 @srand(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
